[rename] change UseCase method name & Port out method name